add healthcheck for docker and change api endpoints
