# routes/authRoutes.js
@@ -3,8 +3,7 @@ const router = express.Router();
 const authController = require('../controllers/authController');
 const authMiddleware = require('../middleware/authMiddleware');
 
-router.get('/logout', authMiddleware.authenticateUser, authController.logout);
-router.post('/register', authMiddleware.checkLogOut, authMiddleware.checkUsername, authController.register);
-router.post('/login', authMiddleware.checkLogOut, authController.login);
+router.delete('/', authMiddleware.authenticateUser, authController.logout);
+router.post('/', authMiddleware.checkLogOut, authController.login);
 
 module.exports = router;
